Main2 cuando pulsas una opción se marca y desaparece el resto

--- a/TresActividades/app/src/main/res/values/strings.xml
+++ b/TresActividades/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">TresActividades</string>
-    <color name="red">#ffe3e3</color>
-    <color name="orange">#fff1e5</color>
-    <color name="yellow">#fffddc</color>
+    <color name="red">#ff0000</color>
+    <color name="orange">#ffbb00</color>
+    <color name="yellow">#fff000</color>
 
 </resources>
 
